istio/perf-test/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadclient
  labels:
    app: loadclient
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loadclient
      version: v1
  template:
    metadata:
      labels:
        app: loadclient
        version: v1
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      tolerations:
      - operator: "Exists"
      containers:
      - name: loadclient
        args:
          # only let pod hold, use load-test.sh to test.
          - server
          - --loglevel
          - Verbose
        image: fortio/fortio:1.11.4
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "10000m"
            memory: "1280Mi"
          requests:
            cpu: 100m
            memory: 100Mi
