istio/perf-test/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortio
  labels:
    app: fortio
    service: fortio
spec:
  ports:
  - port: 8080
    name: http
  - port: 8078
    name: tcp
  selector:
    app: fortio
    #app: svc-0000-fortio

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortio
  labels:
    app: fortio
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortio
      version: v1
  template:
    metadata:
      labels:
        app: fortio
        version: v1
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      tolerations:
      - operator: "Exists"
      serviceAccountName: fortio
      containers:
      - name: fortio
        image: fortio/fortio:1.11.4
        imagePullPolicy: IfNotPresent
        args:
          - server
          - --loglevel
          - Verbose
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "10"
            memory: "1000Mi"
          requests:
            cpu: 100m
            memory: 100Mi
